--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title></title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
       <script src="scorocode.js"></script>
